--- a/pursuit/Views/JobDetails.storyboard
+++ b/pursuit/Views/JobDetails.storyboard
@@ -133,7 +133,7 @@
                                 <buttonConfiguration key="configuration" style="filled" title="Apply"/>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Location" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0Wd-iW-CkA">
-                                <rect key="frame" x="28" y="403" width="55.333333333333343" height="17"/>
+                                <rect key="frame" x="28.000000000000004" y="403" width="55.333333333333343" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <nil key="textColor"/>
                                 <nil key="highlightedColor"/>
