--- a/pursuit/Views/JobSeeker Views/ProfileJobSeeker.storyboard
+++ b/pursuit/Views/JobSeeker Views/ProfileJobSeeker.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="AP1-zn-I1U">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="22505" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="JmK-ta-tyb">
     <device id="retina6_12" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="22504"/>
@@ -9,43 +9,43 @@
     </dependencies>
     <scenes>
         <!--Navigation Controller-->
-        <scene sceneID="hLw-pf-2Ol">
+        <scene sceneID="3co-5T-3O1">
             <objects>
-                <navigationController storyboardIdentifier="ResourcesJobS" id="AP1-zn-I1U" sceneMemberID="viewController">
+                <navigationController storyboardIdentifier="ProfileJobS" id="JmK-ta-tyb" sceneMemberID="viewController">
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="ouy-Tg-i5d">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="9zF-UR-PpW">
                         <rect key="frame" x="0.0" y="59" width="393" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="1ZJ-nd-6GL" kind="relationship" relationship="rootViewController" id="8R7-mP-ekQ"/>
+                        <segue destination="V92-lm-XSu" kind="relationship" relationship="rootViewController" id="FVp-Lv-l2x"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="j0B-ES-CJt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="aPs-at-y8i" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="-955" y="3"/>
         </scene>
-        <!--Resources-->
-        <scene sceneID="PX9-Uy-UiC">
+        <!--Profile-->
+        <scene sceneID="nFe-Gz-pMn">
             <objects>
-                <viewController id="1ZJ-nd-6GL" sceneMemberID="viewController">
-                    <view key="view" contentMode="scaleToFill" id="iOE-5T-PMQ">
+                <viewController id="V92-lm-XSu" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="ZLJ-eb-i0J">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <viewLayoutGuide key="safeArea" id="EiF-Me-iIp"/>
+                        <viewLayoutGuide key="safeArea" id="ndh-Fk-Kiy"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                     </view>
-                    <tabBarItem key="tabBarItem" tag="3" title="Resources" image="text.book.closed" catalog="system" id="un7-Em-g4R"/>
-                    <navigationItem key="navigationItem" id="G9o-vE-hnx"/>
+                    <tabBarItem key="tabBarItem" tag="3" title="Profile" image="person" catalog="system" id="TDK-Ng-py0"/>
+                    <navigationItem key="navigationItem" title="Profile" id="S9k-yX-t6m"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="rrz-Am-88g" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="q98-WR-95Z" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
             <point key="canvasLocation" x="141" y="3"/>
         </scene>
     </scenes>
     <resources>
-        <image name="text.book.closed" catalog="system" width="115" height="128"/>
+        <image name="person" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
