i have added a cell2

--- a/pursuit/Views/CvCreationJobseeker.storyboard
+++ b/pursuit/Views/CvCreationJobseeker.storyboard
@@ -182,12 +182,40 @@
                                             </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
-                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="gPp-Qv-Fhj">
-                                        <rect key="frame" x="0.0" y="232.33333969116211" width="393" height="43.666667938232422"/>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" selectionStyle="default" indentationWidth="10" id="dqc-oA-QtF">
+                                        <rect key="frame" x="0.0" y="232.33333969116211" width="393" height="64.333335876464844"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="gPp-Qv-Fhj" id="HR7-mJ-8XL">
-                                            <rect key="frame" x="0.0" y="0.0" width="393" height="43.666667938232422"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="dqc-oA-QtF" id="CFL-0T-eVD">
+                                            <rect key="frame" x="0.0" y="0.0" width="393" height="64.333335876464844"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <stackView opaque="NO" contentMode="scaleToFill" spacing="11" translatesAutoresizingMaskIntoConstraints="NO" id="2D8-8r-GBb">
+                                                    <rect key="frame" x="15" y="30.000000000000004" width="363" height="34.333333333333343"/>
+                                                    <subviews>
+                                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="CPR" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FrF-Wz-T2d">
+                                                            <rect key="frame" x="0.0" y="0.0" width="81.666666666666671" height="34.333333333333336"/>
+                                                            <constraints>
+                                                                <constraint firstAttribute="width" constant="81.670000000000002" id="Bu0-Ad-h3u"/>
+                                                            </constraints>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                            <nil key="textColor"/>
+                                                            <nil key="highlightedColor"/>
+                                                        </label>
+                                                        <textField opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="248" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Value" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="8nY-Wq-Ifu">
+                                                            <rect key="frame" x="92.666666666666657" y="0.0" width="270.33333333333337" height="34.333333333333336"/>
+                                                            <color key="backgroundColor" white="0.66666666669999997" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                                            <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                                            <textInputTraits key="textInputTraits"/>
+                                                        </textField>
+                                                    </subviews>
+                                                </stackView>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstAttribute="trailing" secondItem="2D8-8r-GBb" secondAttribute="trailing" constant="15" id="ZLQ-Gr-vVc"/>
+                                                <constraint firstAttribute="bottom" secondItem="2D8-8r-GBb" secondAttribute="bottom" id="adg-7m-IlR"/>
+                                                <constraint firstItem="2D8-8r-GBb" firstAttribute="top" secondItem="CFL-0T-eVD" secondAttribute="top" constant="30" id="eF5-0z-bqc"/>
+                                                <constraint firstItem="2D8-8r-GBb" firstAttribute="leading" secondItem="CFL-0T-eVD" secondAttribute="leading" constant="15" id="hG9-vQ-70u"/>
+                                            </constraints>
                                         </tableViewCellContentView>
                                     </tableViewCell>
                                 </cells>
