edit some seguase and create empolyer storyboard

--- a/pursuit/Views/Base.storyboard
+++ b/pursuit/Views/Base.storyboard
@@ -60,7 +60,7 @@
         <!--ProfileJobSeeker-->
         <scene sceneID="rcG-XF-Roo">
             <objects>
-                <viewControllerPlaceholder storyboardIdentifier="ProfileJobSeeker" storyboardName="ProfileJobSeeker" referencedIdentifier="ProfileJobSeeker" id="aUS-jl-yja" sceneMemberID="viewController">
+                <viewControllerPlaceholder storyboardIdentifier="ProfileJobSeeker" storyboardName="ProfileJobSeeker" id="aUS-jl-yja" sceneMemberID="viewController">
                     <tabBarItem key="tabBarItem" title="Item" id="Yp6-bf-7Ve"/>
                 </viewControllerPlaceholder>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="5PN-YT-6eK" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
