--- a/pursuit/Views/JobSeeker Views/TableViewCells/JobTableViewCell.xib
+++ b/pursuit/Views/JobSeeker Views/TableViewCells/JobTableViewCell.xib
@@ -9,7 +9,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="jobTblCell" rowHeight="96" id="KGk-i7-Jjw" customClass="JobTableViewCell" customModule="pursuit" customModuleProvider="target">
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="jobTblCell" rowHeight="110" id="KGk-i7-Jjw" customClass="JobTableViewCell" customModule="pursuit" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="390" height="96"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="KGk-i7-Jjw" id="H2p-sc-9uM">
@@ -17,7 +17,7 @@
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="cCm-MT-DQl">
-                        <rect key="frame" x="16" y="17" width="53" height="54"/>
+                        <rect key="frame" x="17" y="17" width="54" height="54"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="iJa-de-ltE">
@@ -49,10 +49,10 @@
                         <nil key="highlightedColor"/>
                     </label>
                     <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="z0G-u1-psP">
-                        <rect key="frame" x="299" y="45" width="71" height="20"/>
+                        <rect key="frame" x="299" y="38" width="71" height="20"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <state key="normal" title="Button"/>
-                        <buttonConfiguration key="configuration" style="gray" title="View"/>
+                        <buttonConfiguration key="configuration" style="gray" title="View" cornerStyle="medium"/>
                     </button>
                 </subviews>
             </tableViewCellContentView>
@@ -64,7 +64,7 @@
                 <outlet property="lblLocation" destination="NoJ-2r-UWf" id="TKg-3n-YZ6"/>
                 <outlet property="lblTime" destination="Iiu-RN-0jn" id="nsw-ED-oMr"/>
             </connections>
-            <point key="canvasLocation" x="146.56488549618319" y="-12.67605633802817"/>
+            <point key="canvasLocation" x="276" y="-25"/>
         </tableViewCell>
     </objects>
 </document>
