--- a/pursuit/Views/PostApplicationTableViewCell.xib
+++ b/pursuit/Views/PostApplicationTableViewCell.xib
@@ -16,7 +16,7 @@
                 <rect key="frame" x="0.0" y="0.0" width="320" height="115"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="applelogo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Rbg-RT-VET">
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="apple.logo" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Rbg-RT-VET">
                         <rect key="frame" x="9" y="26.333333333333332" width="62" height="60.333333333333343"/>
                         <constraints>
                             <constraint firstAttribute="width" constant="62" id="9NR-S6-nJZ"/>
@@ -68,6 +68,6 @@
         </tableViewCell>
     </objects>
     <resources>
-        <image name="applelogo" catalog="system" width="105" height="128"/>
+        <image name="apple.logo" catalog="system" width="105" height="128"/>
     </resources>
 </document>
